# aspis

./: .coveragerc  Gringo scheduler.ipynb  README.rst  gaspr.py  requirements.txt  sched.lp4  setup.cfg  tox.ini
aspis/: aspis.py
aspis/tests/: test_aspis.py
