[metadata]
name = aspis
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = ASP in Scheduling
description-file = 
	README.rst
home-page = http://git.openstack.org/cgit/openstack/aspis
classifier = 
	Development Status :: 4 - Beta
	Environment :: Console
	Environment :: OpenStack
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python

[files]
packages = 
	aspis

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
